--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ npm-debug.log
 /dashboard/public/code-studio
 /dashboard/public/shared
 /dashboard/public/styleguide
+/dashboard/test/ui/.account-number
 /globals.yml
 /levelbuilder_ci_last_run
 /locals.yml
