--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,9 @@ npm-debug.log
 /dashboard/public/code-studio
 /dashboard/public/shared
 /dashboard/public/styleguide
-/dashboard/test/ui/.account-number
+/dashboard/test/ui/.student_number
+/dashboard/test/ui/.taught_student_number
+/dashboard/test/ui/.authorized_taught_student_number
 /globals.yml
 /levelbuilder_ci_last_run
 /locals.yml
