--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
 
       # restore npm cache
       - restore_cache:
-          key: code-dot-org-node-v6.1-{{ checksum "apps/package.json" }}
+          key: code-dot-org-node-v7-{{ checksum "apps/package.json" }}
 
       # start mysql
       - run: sudo service mysql start
@@ -110,9 +110,10 @@ jobs:
             RAKE_VERBOSE: true
 
       - save_cache:
-          key: code-dot-org-node-v6.1-{{ checksum "apps/package.json" }}
+          key: code-dot-org-node-v7-{{ checksum "apps/package.json" }}
           paths:
             - apps/node_modules
+            - /home/circleci/.cache/yarn
 
       - save_cache:
           key: code-dot-org-bundle-v6-{{ checksum "Gemfile.lock" }}
