Fallback cache key for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,7 @@ jobs:
       - restore_cache:
           keys:
             - code-dot-org-ui-test-data-v1-staging-
+            - code-dot-org-ui-test-data-v1-{{ .Branch }}-
 
       - run:
           name: seed ui tests
