--- a/.gitattributes
+++ b/.gitattributes
@@ -22,9 +22,6 @@ pegasus/sites.v3/** filter=lfs diff=lfs merge=lfs -text
 pegasus/sites/** filter=lfs diff=lfs merge=lfs -text
 shared/images/** filter=lfs diff=lfs merge=lfs -text
 
-# INCLUDE any .zip files that appear in the pyodide folder.
-apps/lib/pyodide/*.zip filter=lfs diff=lfs merge=lfs -text
-
 # HOW TO EXCLUDE A FILE/FILES FROM GIT LFS:
 #
 # 1. Add a new exclusion pattern in the immediately following section
@@ -60,6 +57,7 @@ pegasus/sites*/**/*.scss !text !filter !merge !diff
 *.png filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.whl filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
 
 # Small list of very common text file types to EXCLUDE from Git LFS:
 *.css !text !filter !merge !diff
