--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,7 @@ pegasus/sites*/**/*.scss !text !filter !merge !diff
 *.png filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.whl filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
 
 # Small list of very common text file types to EXCLUDE from Git LFS:
 *.css !text !filter !merge !diff
