--- a/apps/package.json
+++ b/apps/package.json
@@ -139,6 +139,7 @@
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-selenium-grid-launcher": "^0.3.0",
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.0",
     "load-grunt-tasks": "3.5.0",
