--- a/apps/package.json
+++ b/apps/package.json
@@ -49,6 +49,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
+    "@playwright/test": "^1.44.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@pyodide/webpack-plugin": "^1.3.2",
     "@storybook/addon-a11y": "^8.0.0",
@@ -64,6 +65,7 @@
     "@types/jquery": "^3.5.16",
     "@types/js-cookie": "^3.0.6",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^20.14.2",
     "@types/react-bootstrap": "^0.32.36",
     "@types/reactabular-table": "^8.14.6",
     "@types/sinon": "^10.0.14",
