--- a/apps/package.json
+++ b/apps/package.json
@@ -299,6 +299,7 @@
     "react-tether": "^1.0.4",
     "react-tooltip": "^3.2.7",
     "react-transition-group": "2.9.0",
+    "react-typist": "^2.0.5",
     "react-virtualized": "^9.18.5",
     "react-virtualized-select": "^3.0.1",
     "react-with-context": "^2.0.0",
