Updates docker commands to add hooks and fixes for user ids.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,6 @@ include:
 
   # Commands that are useful for developers
   - path: ./docker/developers/docker-compose.commands.yml
+
+  # Commands that serve as git hooks
+  - path: ./docker/developers/docker-compose.hooks.yml
