--- a/apps/packages/auth/package.json
+++ b/apps/packages/auth/package.json
@@ -12,6 +12,7 @@
     "@cdo/component-library": "*",
     "md5": "^2.3.0",
     "next": "14.2.4",
+    "next-auth": "beta",
     "react": "^18",
     "react-dom": "^18"
   },
