--- a/apps/packages/auth/package.json
+++ b/apps/packages/auth/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.7",
     "@cdo/component-library": "*",
+    "graphql": "^16.9.0",
     "md5": "^2.3.0",
     "next": "14.2.4",
     "next-auth": "beta",
