--- a/.drone.yml
+++ b/.drone.yml
@@ -187,7 +187,8 @@ steps:
       restore: true
       filename: ui-tests-cache-ubuntu-20.tar
 
-  - name: ui-tests
+  - name: ui-tests-backend
+    detach: true
     # see: docker/dockerfiles/Dockerfile
     image: codedotorg/code-dot-org:1.9.4
     pull: always
@@ -221,10 +222,62 @@ steps:
       # Depended on by CircleUtils: https://github.com/code-dot-org/code-dot-org/blob/56c4061afb55432ba8ccecc72b5b960ebd9480aa/lib/cdo/circle_utils.rb#L19
       - export CIRCLE_SHA1=$DRONE_COMMIT
       - EXIT_CODE=0
+      - cd dashboard && RAILS_ENV=test bundle exec puma -e test
       - /entrypoint.sh docker/ui_tests.sh || EXIT_CODE=$?
       - while pgrep bash >/dev/null; do echo "found bash process; keeping container alive"; sleep 20; done
       - exit $EXIT_CODE
 
+  - name: ui-tests
+    # see: docker/dockerfiles/Dockerfile
+    image: codedotorg/code-dot-org:1.9.4
+    volumes:
+      - name: rbenv
+        path: /home/circleci/.rbenv
+      - name: mysql
+        path: /var/lib/mysql
+    environment:
+      # Each Drone secret below must be explicitly written to locals.yml in /docker/ui_tests.sh
+      CLOUDFRONT_KEY_PAIR_ID:
+        from_secret: CLOUDFRONT_KEY_PAIR_ID
+      CLOUDFRONT_PRIVATE_KEY:
+        from_secret: CLOUDFRONT_PRIVATE_KEY
+      PROPERTIES_ENCRYPTION_KEY:
+        from_secret: PROPERTIES_ENCRYPTION_KEY
+      FIREBASE_NAME:
+        from_secret: FIREBASE_NAME
+      FIREBASE_SECRET:
+        from_secret: FIREBASE_SECRET
+      FIREBASE_SHARED_SECRET:
+        from_secret: FIREBASE_SHARED_SECRET
+      SAUCE_USERNAME:
+        from_secret: SAUCE_USERNAME
+      SAUCE_ACCESS_KEY:
+        from_secret: SAUCE_ACCESS_KEY
+    commands:
+      - sudo chown -R circleci:circleci .
+      # cache is restored to source directory, so we need to copy it into the right place
+      - cp -rn "$(pwd)/home/circleci/.rbenv" /home/circleci || true
+      # Depended on by CircleUtils: https://github.com/code-dot-org/code-dot-org/blob/56c4061afb55432ba8ccecc72b5b960ebd9480aa/lib/cdo/circle_utils.rb#L19
+      - export CIRCLE_SHA1=$DRONE_COMMIT
+      - EXIT_CODE=0
+      - /entrypoint.sh docker/ui_tests.sh || EXIT_CODE=$?
+      - while pgrep bash >/dev/null; do echo "found bash process; keeping container alive"; sleep 20; done
+      - exit $EXIT_CODE
+    depends_on:
+      - ui-tests-backend
+  - commands:
+      - cd apps
+      - yarn install
+      - npx --yes wait-on@7.0.1 http://$HOST:$PORT
+      - npx --yes playwright install --with-deps
+      - npx --yes playwright test
+    depends_on:
+      - ui-tests-backend
+    environment:
+      HOST: "localhost-studio.code.org"
+      PORT: "3001"
+    image: node:20-bookworm
+    name: playwright
   - name: update-cache
     image: plugins/s3-cache
     volumes:
