--- a/.drone.yml
+++ b/.drone.yml
@@ -190,6 +190,9 @@ steps:
   - name: ui-tests-backend
     detach: true
     depends_on:
+      - "ui-tests-redis"
+      - "get-cached-staging"
+      - checkout
       - "restore-cache"
     # see: docker/dockerfiles/Dockerfile
     image: codedotorg/code-dot-org:1.9.4
