--- a/.drone.yml
+++ b/.drone.yml
@@ -230,10 +230,7 @@ steps:
       # Depended on by CircleUtils: https://github.com/code-dot-org/code-dot-org/blob/56c4061afb55432ba8ccecc72b5b960ebd9480aa/lib/cdo/circle_utils.rb#L19
       - export CIRCLE_SHA1=$DRONE_COMMIT
       - EXIT_CODE=0
-      - /entrypoint.sh docker/ui_tests.sh || EXIT_CODE=$?
-      - cd dashboard && RAILS_ENV=test bundle exec puma -e test
-      - while pgrep bash >/dev/null; do echo "found bash process; keeping container alive"; sleep 20; done
-      - exit $EXIT_CODE
+      - /entrypoint.sh docker/ui_tests.sh
 
   - name: ui-tests
     # see: docker/dockerfiles/Dockerfile
@@ -274,9 +271,12 @@ steps:
     depends_on:
       - ui-tests-backend
   - commands:
+      - sudo chown -R circleci:circleci .
+      # cache is restored to source directory, so we need to copy it into the right place
+      - cp -rn "$(pwd)/home/circleci/.rbenv" /home/circleci || true
+      - npx --yes wait-on@7.0.1 http://$HOST:$PORT
       - cd apps
       - yarn install
-      - npx --yes wait-on@7.0.1 http://$HOST:$PORT
       - npx --yes playwright install --with-deps
       - npx --yes playwright test
     depends_on:
@@ -284,6 +284,11 @@ steps:
     environment:
       HOST: "localhost-studio.code.org"
       PORT: "3001"
+    volumes:
+      - name: rbenv
+        path: /home/circleci/.rbenv
+      - name: mysql
+        path: /var/lib/mysql
     image: node:20-bookworm
     name: playwright
   - name: update-cache
