--- a/.drone.yml
+++ b/.drone.yml
@@ -196,7 +196,7 @@ steps:
   - name: ui-tests-backend
     detach: true
     depends_on:
-      - checkout
+      - restore-cache
     # see: docker/dockerfiles/Dockerfile
     image: codedotorg/code-dot-org:1.9.4
     pull: always
