Music: initial AI (WIP)

--- a/apps/package.json
+++ b/apps/package.json
@@ -212,6 +212,7 @@
     "@codemirror/view": "^6.22.1",
     "@dsco_/link": "^1.1.2",
     "@lezer/highlight": "^1.2.0",
+    "@magenta/music": "^1.23.1",
     "@microsoft/immersive-reader-sdk": "^1.1.0",
     "@react-bootstrap/pagination": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.3",
