--- a/apps/package.json
+++ b/apps/package.json
@@ -222,6 +222,10 @@
     "@codemirror/search": "^6.5.5",
     "@codemirror/state": "^6.3.2",
     "@codemirror/view": "^6.22.1",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@dsco_/link": "^1.1.2",
     "@lezer/highlight": "^1.2.0",
     "@microsoft/immersive-reader-sdk": "^1.1.0",
