--- a/apps/package.json
+++ b/apps/package.json
@@ -50,13 +50,13 @@
     "@babel/preset-react": "^7.24.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@pyodide/webpack-plugin": "^1.3.2",
-    "@storybook/addon-a11y": "^8.0.0",
-    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-a11y": "~8.1.11",
+    "@storybook/addon-essentials": "~8.1.11",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.0",
-    "@storybook/core-common": "^8.0.0",
-    "@storybook/csf-tools": "^8.0.0",
-    "@storybook/react": "^8.0.0",
-    "@storybook/react-webpack5": "^8.0.0",
+    "@storybook/core-common": "~8.1.11",
+    "@storybook/csf-tools": "~8.1.11",
+    "@storybook/react": "~8.1.11",
+    "@storybook/react-webpack5": "~8.1.11",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/chai": "^4.3.5",
@@ -156,7 +156,7 @@
     "sinon": "^11.0.0",
     "sinon-chai": "^3.1.0",
     "source-map-loader": "^4.0.1",
-    "storybook": "^8.0.0",
+    "storybook": "~8.1.11",
     "storybook-addon-rtl": "^1.0.0",
     "style-loader": "^3.2.1",
     "stylelint": "^15.0.0",
