--- a/apps/package.json
+++ b/apps/package.json
@@ -68,6 +68,7 @@
     "@types/sinon": "^10.0.14",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "acorn-import-assertions": "^1.9.0",
     "aws-sdk": "2.1231.0",
     "babel-loader": "^9.1.3",
@@ -86,7 +87,6 @@
     "css-loader": "^6.2.0",
     "dedent": "^1.5.1",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -277,7 +277,7 @@
     "qtip2": "2.2.0",
     "query-string": "4.1.0",
     "radium": "^0.25.2",
-    "react": "~16.14.0",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^0.33.1",
     "react-bootstrap-2": "npm:react-bootstrap@^2.7.4",
@@ -285,7 +285,7 @@
     "react-csv": "^2.0.3",
     "react-datepicker": "1.6.0",
     "react-debounce-input": "^3.2.2",
-    "react-dom": "~16.14.0",
+    "react-dom": "^17.0.2",
     "react-dom-confetti": "^0.2.0",
     "react-draggable": "^4.4.6",
     "react-focus-lock": "^2.11.2",
