--- a/apps/package.json
+++ b/apps/package.json
@@ -251,6 +251,7 @@
     "jquery": "1.12.1",
     "jquery-ui": "^1.12.1",
     "js-cookie": "^2.1.2",
+    "js-file-download": "^0.4.12",
     "jshint": "^2.9.5",
     "jsonic": "^0.3.0",
     "jszip": "3.10.1",
