--- a/docker/developers/.env
+++ b/docker/developers/.env
@@ -5,3 +5,6 @@ SELENIUM_HUB_VERSION=4.8.2
 SELENIUM_FIREFOX_VERSION=112.0
 SELENIUM_CHROME_VERSION=105.0
 SELENIUM_EDGE_VERSION=105.0
+
+# Localstack version
+LOCALSTACK_VERSION=3.5.0
