--- a/docker/developers/docker-compose.dashboard.yml
+++ b/docker/developers/docker-compose.dashboard.yml
@@ -36,6 +36,8 @@ services:
         condition: service_healthy
       redis-contained:
         condition: service_started
+      localstack-contained:
+        condition: service_healthy
     tty: true
     command: /bin/bash -l -c './bin/dashboard-server'
     networks:
